--- a/index.html
+++ b/index.html
@@ -1,3 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <!-- Import Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
+  <!-- Import CSS Animation -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+
+  <link rel="stylesheet" href="style.css">
+  <script defer src='script.js'></script>
+  <title>Tri-Socialytics</title>
+  <link rel='icon' type='image/gif/png' href='https://i.imgur.com/5bF5y1r.png?1'>
+</head>
+
+<body>
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 <video autoplay loop muted poster="screenshot.jpg" id="background">
         <source type="video/mp4" src="https://staging.coverr.co/s3/mp4/Boxing-gym.mp4">
         <source type="video/webm" src="https://staging.coverr.co/s3/webm/Boxing-gym.webm">
@@ -27,3 +60,8 @@
     <p>Click here for <a href="#" target="_blank">Full screen view!</a></p>
   </div>
 </div>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+</body>
+
+</html>
+
