--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
  -->
   <link rel="stylesheet" href="style.css">
-  <script defer src='script.js'></script>
+<!--   <script defer src='script.js'></script> -->
   <title>Tri-Socialytics</title>
 <!--   <link rel='icon' type='image/gif/png' href='https://i.imgur.com/5bF5y1r.png?1'> -->
 </head>
@@ -60,7 +60,7 @@
     <p>Click here for <a href="#" target="_blank">Full screen view!</a></p>
   </div>
 </div>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+<!--   <script type="text/javascript" src="js/materialize.min.js"></script> -->
 </body>
 
 </html>
