--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<video autoplay loop muted poster="screenshot.jpg" id="background">
+<!-- <video autoplay loop muted poster="screenshot.jpg" id="background">
         <source type="video/mp4" src="https://staging.coverr.co/s3/mp4/Boxing-gym.mp4">
         <source type="video/webm" src="https://staging.coverr.co/s3/webm/Boxing-gym.webm">
-</video>
+</video> -->
 <div class="main">
   <div id='content'>
     <div class='title'>
