Added coming soon, terms and privacy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
+  <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
 <!--   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
  -->
   <!-- Compiled and minified CSS -->
@@ -18,8 +22,8 @@
   <!-- Import CSS Animation -->
 <!--   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
  -->
-  <link rel="stylesheet" href="style.css">
-<!--   <script defer src='script.js'></script> -->
+ <link rel="stylesheet" href="style.css">
+  <script defer src='script.js'></script>
   <title>Tri-Socialytics</title>
 <!--   <link rel='icon' type='image/gif/png' href='https://i.imgur.com/5bF5y1r.png?1'> -->
 </head>
@@ -28,17 +32,16 @@
   <!--Import Google Icon Font-->
 <!--   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  -->
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- <video autoplay loop muted poster="screenshot.jpg" id="background">
-        <source type="video/mp4" src="https://staging.coverr.co/s3/mp4/Boxing-gym.mp4">
-        <source type="video/webm" src="https://staging.coverr.co/s3/webm/Boxing-gym.webm">
-</video> -->
+<video autoplay loop muted poster="screenshot.jpg" id="background">
+        <!-- <source type="video/mp4" src="./assets/likes.mp4"> -->
+        <source type="video/mp4" src="./assets/scroll.mp4">
+
+</video>
 <div class="main">
   <div id='content'>
     <div class='title'>
-      <span>Socialytics </span>
+      <span>Tri-Socialytics </span>
     </div>
     <p>coming soon</p>
     <section>
@@ -57,9 +60,24 @@
         </li>
       </ul>
     </section>
-    <p>Click here for <a href="#" target="_blank">Full screen view!</a></p>
+    <div class="footer-basic">
+      <footer>
+          <div class="social">
+            <a href="#"><i class="icon ion-social-instagram"></i></a>
+            <a href="#"><i class="icon ion-social-snapchat"></i></a>
+            <a href="#"><i class="icon ion-social-twitter"></i></a>
+            <a href="#"><i class="icon ion-social-facebook"></i></a>
+          </div>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="./privacy.html">Privacy Policy</a></li>
+            <li class="list-inline-item"><a href="./terms.html">Terms</a></li>
+          </ul>
+          <p class="copyright">Tri-Socialytics © 2022</p>
+      </footer>
+  </div>
   </div>
 </div>
+
 <!--   <script type="text/javascript" src="js/materialize.min.js"></script> -->
 </body>
 
